--- a/material/base.html
+++ b/material/base.html
@@ -91,9 +91,9 @@
         {% endif %}
       </defs>
     </svg>
-    <input class="md-toggle" data-md-toggle="drawer" type="checkbox" id="drawer" autocomplete="off">
-    <input class="md-toggle" data-md-toggle="search" type="checkbox" id="search" autocomplete="off">
-    <label class="md-overlay" data-md-component="overlay" for="drawer"></label>
+    <input class="md-toggle" data-md-toggle="drawer" type="checkbox" id="__drawer" autocomplete="off">
+    <input class="md-toggle" data-md-toggle="search" type="checkbox" id="__search" autocomplete="off">
+    <label class="md-overlay" data-md-component="overlay" for="__drawer"></label>
     {% if page.toc | first is defined %}
       <a href="{{ (page.toc | first).url | url }}" tabindex="1" class="md-skip">
         {{ lang.t('skip.link.title') }}
@@ -170,7 +170,7 @@
       {% endblock %}
     </div>
     {% block scripts %}
-    <script src="{{ 'assets/javascripts/application.c1ad9e36.js' | url }}"></script>
+    <script src="{{ 'assets/javascripts/application.6f02ae1b.js' | url }}"></script>
       {% if lang.t("search.language") != "en" %}
         {% set languages = lang.t("search.language").split(",") %}
         {% if languages | length and languages[0] != "" %}
